--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,180 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Glee</title>
+  <link rel="shortcut icon" href="/images/icons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <nav class="menu">
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo.png"alt="logo">
+        </a>
 
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Home+
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              About
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Services
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Pages+
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              News
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Contact
+            </a>
+          </li>
+        </ul>
+
+        <div class="usernav">
+          <button class="usernav__search" type="button">
+            <span class="visually-hidden">Кнопка поиска</span>
+          </button>
+          <a class="usernav__favorites" href="#">
+            Ссылка на избранные товары
+            <span class="usernav__num">
+              0
+            </span>
+          </a>
+          <a class="usernav__cart" href="#">
+            Ссылка на корзину
+            <span class="usernav__num usernav__circle">
+              0
+            </span>
+          </a>
+          <button class="usernav__dots" type="button">
+            <span class="visually-hidden">Кнопка дополнительного меню</span>
+          </button>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <footer class="footer">
+    <div class="container-1200">
+      <div class="footer__inner">
+
+        <div class="footer__item">
+          <a class="logo" href="#">
+            <img class="logo__img footer__logo" src="images/logo.png"alt="logo">
+          </a>
+          <address class="footer__contact">
+            <a class="footer__address" href="#"><span>address:</span> 4772 Wines Lane Houston, TX 77032</a>
+            <a class="footer__phone" href="tel: +832-347-5843">Telephone: +832-347-5843</a>
+            <a class="footer__mail" href="mailto: contact@Glee.com"><span>Email:</span> contact@Glee.com</a>
+          </address>
+        </div>
+
+        <div class="footer__item">
+          <span class="footer__title">
+            Services
+          </span>
+          <ul class="footer__list">
+            <li class="footer__string">
+              <a class="footer__link" href="">About us</a>
+            </li>
+            <li class="footer__string">
+              <a class="footer__link" href="">Return Policy</a>
+            </li>
+            <li class="footer__string">
+              <a class="footer__link" href="">Our Blog</a>
+            </li> 
+            <li class="footer__string">
+              <a class="footer__link" href="">Contact Us</a>
+            </li>
+            <li class="footer__string">
+              <a class="footer__link" href="">Terms & Condition</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__item">
+          <span class="footer__title">
+            Account
+          </span>
+          <ul class="footer__list">
+            <li class="footer__string">
+              <a class="footer__link" href="">Your Account</a>
+            </li>
+            <li class="footer__string">
+              <a class="footer__link" href="">Checkout</a>
+            </li>
+            <li class="footer__string">
+              <a class="footer__link" href="">Login</a>
+            </li> 
+            <li class="footer__string">
+              <a class="footer__link" href="">Register</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__item">
+          <span class="footer__title">
+            Newsletter
+          </span>
+          <p class="footer__text">
+            Subscribe by our newsletter and get update protidin.
+          </p>
+          <form class="footer__form">
+            <label class="footer__label" for="">
+              <input class="footer__input" type="email" placeholder="Email address">
+            </label>
+            <button class="footer__btn" type="submit">
+              Subscribe
+              <span class="visually-hidden">Кнопка подписаться</span>  
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="footer__copyright">
+        <p class="footer__copy">©2020 CopyRight Example. All rights reserved.</p>
+
+        <ul class="footer__menu">
+          <li class="footer__items">
+            <a href="" class="footer__page">
+              Home
+            </a>
+          </li>
+          <li class="footer__items">
+            <a href="" class="footer__page">
+              About
+            </a>
+          </li>
+          <li class="footer__items">
+            <a href="" class="footer__page">
+              Blog
+            </a>
+          </li>
+          <li class="footer__items">
+            <a href="" class="footer__page">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/main.min.js"></script>
 </body>
