--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,186 @@
     </div>
   </header>
 
+  <main class="main">
+    <section class="slider">
+      <div class="container">
+        <div class="slider__inner">
+          
+          <div class="slider__item">
+            <div class="container-1200">
+              <div class="slider__box">
+                <div class="slider__text">
+                  <h1 class="slider__title">
+                    Smart and trendy
+                  </h1>
+                  <p class="slider__descr">
+                    Dolor sit amet,  consecteturadipisicing elit, sed do   eiusmodtempor incididunt
+                  </p>
+                  <a class="slider__btn" href="#">
+                    Shop  Now
+                  </a>
+                </div>
+                <img class="slider__img" src="images/sofa.png" alt="sofa">
+              </div>
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="container-1200">
+              <div class="slider__box">
+                <div class="slider__text">
+                  <h1 class="slider__title">
+                    Smart and trendy
+                  </h1>
+                  <p class="slider__descr">
+                    Dolor sit amet,  consecteturadipisicing elit, sed do   eiusmodtempor incididunt
+                  </p>
+                  <a class="slider__btn" href="#">
+                    Shop  Now
+                  </a>
+                </div>
+                <img class="slider__img" src="images/sofa.png" alt="sofa">
+              </div>
+            </div>
+          </div>
+
+          <div class="slider__item">
+            <div class="container-1200">
+              <div class="slider__box">
+                <div class="slider__text">
+                  <h1 class="slider__title">
+                    Smart and trendy
+                  </h1>
+                  <p class="slider__descr">
+                    Dolor sit amet,  consecteturadipisicing elit, sed do   eiusmodtempor incididunt
+                  </p>
+                  <a class="slider__btn" href="#">
+                    Shop  Now
+                  </a>
+                </div>
+                <img class="slider__img" src="images/sofa.png" alt="sofa">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <div class="info">
+      <div class="container">
+        <div class="info__inner">
+          <div class="info__support">
+            <span class="info__title">
+              Support 24/7.
+            </span>
+            <p class="info__descr">
+              Contact us 24 hours a day, 7 days a week.
+            </p>
+          </div>
+
+          <div class="info__delivery">
+            <span class="info__title">
+              Delivery.
+            </span>
+            <p class="info__descr">
+              Free shipping on all US order.
+            </p>
+          </div>
+
+          <div class="info__payment">
+            <span class="info__title">
+              100% Payment secure.
+            </span>
+            <p class="info__descr">
+              We ensure secure payment with PEV.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="products">
+      <div class="container-1200">
+        <h2 class="title products__title">
+          Products of the week
+        </h2>
+
+        <ul class="products__filter">
+          <li class="products__button">
+            <button class="products__btn" type="button" data-filter="all">
+              All
+            </button>
+          </li>
+          <li class="products__button">
+            <button class="products__btn" type="button" data-filter=".category-a">
+              Furnitures
+            </button>
+          </li>
+          <li class="products__button">
+            <button class="products__btn" type="button" data-filter=".category-b">
+              Chairs
+            </button>
+          </li>
+          <li class="products__button">
+            <button class="products__btn" type="button" data-filter=".category-c">
+              Lighting
+            </button>
+          </li>
+          <li class="products__button">
+            <button class="products__btn" type="button" data-filter=".category-d">
+              Decor
+            </button>
+          </li>
+        </ul>
+
+        <div class="products__content">
+          <div class="products__item mix category-a" data-order="1">
+            <img class="products__img" src="images/products/1.png" alt="Wooden radio">
+            <a class="products__link" href="#">Wooden radio</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-b" data-order="2">
+            <img class="products__img" src="images/products/2.png" alt="Wooden chair">
+            <a class="products__link" href="#">Wooden chair</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-c" data-order="3">
+            <img class="products__img" src="images/products/3.png" alt="White chair">
+            <a class="products__link" href="#">White chair</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-a" data-order="4">
+            <img class="products__img" src="images/products/4.png" alt="Retro table">
+            <a class="products__link" href="#">Retro table</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-d" data-order="5">
+            <img class="products__img" src="images/products/5.png" alt="Wooden radio">
+            <a class="products__link" href="#">Wooden radio</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-d" data-order="6">
+            <img class="products__img" src="images/products/6.png" alt="Wooden chair">
+            <a class="products__link" href="#">Wooden chair</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-b" data-order="7">
+            <img class="products__img" src="images/products/7.png" alt="White chair">
+            <a class="products__link" href="#">White chair</a>
+            <p class="products__price">$29.00</p>
+          </div>
+          <div class="products__item mix category-a" data-order="8">
+            <img class="products__img" src="images/products/8.png" alt="Retro table">
+            <a class="products__link" href="#">Retro table</a>
+            <p class="products__price">$29.00</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
   <footer class="footer">
     <div class="container-1200">
       <div class="footer__inner">
